<resources>
    <string name="app_name">Amiibo Games</string>
    <string name="app_title">Find Your Game!</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login_btn">Login</string>
    <string name="login_register_btn">Register</string>
    <string name="login_invalid_username">Wrong Username Or/And Password</string>
    <string name="login_checkbox">Remember me</string>
    <string name="search_loading_data">Please wait for the data of Amiibo games to be displayed</string>
    <string name="search_error_reading_data">Couldnt read data from API. For more information: </string>
    <string name="search_no_results">No search results found for query: </string>
    <string name="search_found_entries_from_api">Found total number of games entries: </string>
    <string name="register_email">Email</string>
    <string name="register_name">Name</string>
    <string name="register_password">Password</string>
    <string name="register_register_btn">Register</string>
    <string name="register_title">Register form</string>
    <string name="register_invalid_email_message">Wrong email</string>
    <string name="new_entry_game">Game:</string>
    <string name="new_entry_game_mario">Mario</string>
    <string name="new_entry_game_chester">Chester</string>
    <string name="new_entry_game_naomi">Naomi</string>
    <string name="new_entry_game_lily">Lily</string>
    <string name="new_entry_game_series">Game Series:</string>
    <string name="new_entry_game_series_animal_crossing">Animal Crossing</string>
    <string name="new_entry_game_series_super_mario">Super Mario</string>
    <string name="new_entry_game_series_legend_zelda">The Legend of Zelda</string>
    <string name="new_entry_game_series_pokemon">Pokemon</string>
    <string name="new_entry_game_type">Type:</string>
    <string name="new_entry_type_1">Card</string>
    <string name="new_entry_type_2">Figure</string>
    <string name="new_entry_type_3">Yarn</string>
    <string name="new_entry_game_code">Game code:</string>
    <string name="new_entry_game_btn">Display</string>
    <string name="new_entry_invalid_code">Incorrect game code</string>

</resources>
