<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_entry_game"
                android:textColor="@color/colorWhite"/>
            <CheckBox
                android:id="@+id/game_mario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_game_mario"
                />

            <CheckBox
                android:id="@+id/game_chester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_game_chester" />

            <CheckBox
                android:id="@+id/game_lily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_game_lily" />

            <CheckBox
                android:id="@+id/game_naomi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_game_naomi"
                android:checked="true"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_game_series"
                android:textColor="@color/colorWhite"/>

            <RadioGroup
                android:id="@+id/game_series"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_animal_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_game_series_animal_crossing" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_game_series_legend_zelda" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_game_series_pokemon" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_game_series_super_mario"
                    android:checked="true"/>
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_entry_game_type"
                android:textColor="@color/colorWhite"/>

            <Spinner
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_entry_game_code"
                android:textColor="@color/colorWhite"/>

            <EditText
                android:id="@+id/game_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/display_selected_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGrey"
                android:text="@string/new_entry_game_btn" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>